# GOL-Rasterisation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  map.ppm  pgm_out.cpp  pgm_out.hpp  segments.cpp  segments.hpp
